--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/10.modify-tenant-properties.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/10.modify-tenant-properties.md
@@ -1,6 +1,6 @@
 # 修改租户属性
 
-修改用户租户属性，包括修改租户的副本数、Zone 列表、主 Zone 以及系统变量值等。本文介绍如何修改租户属性。
+OceanBase 数据库支持修改用户租户的属性，包括修改租户的副本数、Zone 列表、主 Zone 以及系统变量值等。本文介绍如何修改租户属性。
 
 ## 背景信息
 
@@ -11,7 +11,7 @@
 
 ## 操作步骤
 
-1. 使用 root 用户登录到数据库的 sys 租户。
+1. 使用 root 用户登录到集群的 sys 租户。
 
     ```sql
     $obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
@@ -37,7 +37,7 @@
     1 row in set
     ```
 
-    `DBA_OB_TENANTS` 视图的详细说明，请参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
+    `DBA_OB_TENANTS` 视图的详细说明，参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
 
 4. 通过 `ALTER TENANT` 语句，修改租户属性。
 
@@ -57,22 +57,22 @@
 
     参数说明：
 
-    * `{tenant_name | ALL}`：租户名称，ALL 表示所有租户。
+    * `{tenant_name | ALL}`：租户名称，`ALL` 表示所有租户。
     * `PRIMARY_ZONE`：用于指定租户的 Primary Zone。
     * `RESOURCE_POOL_LIST`：指定资源池列表。每次仅支持添加或删除一个资源池。
     * `LOCALITY`：描述副本在 Zone 间的分布情况，如：`F@zone1,F@zone2,F@zone3` 表示 `zone1`、`zone2` 和 `zone3` 为全功能副本。该参数增加 Zone 配置时需要租户资源池的 `ZONE_LIST` 包含该 Zone。
 
-    `ALTER TENANT` 语句的详细说明，请参见 [ALTER TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/5.alter-tenant.md)。
+    `ALTER TENANT` 语句的详细说明，参见 [ALTER TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/5.alter-tenant.md)。
 
     示例：
 
-    * 修改租户 mq_t1 的 Primary Zone 为 `"zone1,zone2"`，Locality 为 `"F@sa128_obv4_1,F@sa128_obv4_2,F@sa128_obv4_3"`。
+    * 修改租户 `mq_t1` 的 Primary Zone 为 `"zone1,zone2"`，Locality 为 `"F@sa128_obv4_1,F@sa128_obv4_2,F@sa128_obv4_3"`。
 
         ```sql
         obclient [oceanbase]> ALTER TENANT mq_t1 PRIMARY_ZONE='zone1,zone2';
         Query OK, 0 rows affected
 
-        obclient [oceanbase]> ALTER TENANT mq_t1 LOCALITY="F@zone1,F@zone2,F@zone3";
+        obclient [oceanbase]> ALTER TENANT mq_t1 LOCALITY="F@sa128_obv4_1,F@sa128_obv4_2,F@sa128_obv4_3";
         Query OK, 0 rows affected
         ```
 
@@ -87,5 +87,5 @@
 
    修改 Primary Zone 和 Locality 的命令会立即返回用户，异步生效。所以需要通过相关视图查看命令的实际生效情况：
 
-   * 可以通过 `DBA_OB_TENANTS` 视图查看租户的 Primary Zone 信息 和 Locality 属性。视图的 `PRIMARY_ZONE` 字段表示用户配置的 Primary Zone 值，`LOCALITY` 字段表示用户配置的 Locality 值，`PREVIOUS_LOCALITY` 表示修改前的 Locality 值。如果 `PREVIOUS_LOCALITY` 不为空，表示 Locality 修改尚未生效；如果 `PREVIOUS_LOCALITY` 为空，表示 Locality 修改已生效。
+   * 可以通过 `DBA_OB_TENANTS` 视图查看租户的 Primary Zone 信息和 Locality 属性。视图的 `PRIMARY_ZONE` 字段表示用户配置的 Primary Zone 值，`LOCALITY` 字段表示用户配置的 Locality 值，`PREVIOUS_LOCALITY` 表示修改前的 Locality 值。如果 `PREVIOUS_LOCALITY` 不为空，表示 Locality 修改尚未生效；如果 `PREVIOUS_LOCALITY` 为空，表示 Locality 修改已生效。
    * 可以通过系统租户下的 `CDB_OB_TABLE_LOCATIONS` 视图查看对应租户下表和分区的分布信息，可以通过用户租户下的 `DBA_OB_TABLE_LOCATIONS` 视图查看本租户下表和分区的分布信息。修改 Primary Zone 和 Locality 命令的最终生效会体现到这些视图中。
