--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/11.tenant-locking-and-unlocking.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/11.tenant-locking-and-unlocking.md
@@ -1,6 +1,6 @@
 # 租户锁定和解锁
 
-对租户进行锁定，锁定后，不能在该租户上创建新的连接，已有连接保持不变。本文介绍如何进行租户锁定和解锁。
+OceanBase 数据库支持对租户进行锁定。租户锁定后，不能在该租户上创建新的连接，已有连接保持不变。本文介绍如何进行租户锁定和解锁。
 
 ## 背景信息
 
@@ -17,13 +17,13 @@
 
 ## 租户锁定
 
-1. 使用 root 用户登录到数据库的 sys 租户。
+1. 使用 root 用户登录到集群的 sys 租户。
 
     ```sql
     $obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
     ```
 
-2. 进入 OceanBase 数据库。
+2. 进入 oceanbase 数据库。
 
     ```sql
     obclient [(none)]> USE oceanbase;
@@ -43,7 +43,7 @@
     1 row in set
     ```
 
-    `DBA_OB_TENANTS` 视图的详细说明，请参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
+    `DBA_OB_TENANTS` 视图的详细说明，参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
 
 4. 通过 `ALTER TENANT` 语句，锁定租户。
 
@@ -54,7 +54,7 @@
     Query OK, 0 rows affected
     ```
 
-    `ALTER TENANT` 语句的详细说明，请参见 [ALTER TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/5.alter-tenant.md)。
+    `ALTER TENANT` 语句的详细说明，参见 [ALTER TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/5.alter-tenant.md)。
 
 5. 查看 `DBA_OB_TENANTS` 视图，确认租户是否锁定成功。
 
@@ -70,7 +70,7 @@
 
 ## 租户解锁
 
-1. 使用 root 用户登录到数据库的 sys 租户。
+1. 使用 root 用户登录到集群的 sys 租户。
 
     ```sql
     $obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
@@ -96,18 +96,18 @@
     1 row in set
     ```
 
-    `DBA_OB_TENANTS` 视图的详细说明，请参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
+    `DBA_OB_TENANTS` 视图的详细说明，参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
 
 4. 通过 `ALTER TENANT` 语句，解锁租户。
 
-    以解锁租户 `mq_t1` 为例。
+    以解锁租户 `mq_t1` 为例：
 
     ```sql
     obclient [oceanbase]> ALTER TENANT mq_t1 UNLOCK;
     Query OK, 0 rows affected
     ```
 
-    `ALTER TENANT` 语句的详细说明，请参见 [ALTER TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/5.alter-tenant.md)。
+    `ALTER TENANT` 语句的详细说明，参见 [ALTER TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/5.alter-tenant.md)。
 
 5. 查看 `DBA_OB_TENANTS` 视图，确认租户是否锁定成功。
 
