--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/12.delete-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/12.delete-tenant.md
@@ -1,18 +1,16 @@
 # 删除租户
 
-本文介绍如何删除租户。
-
-删除租户可以通过 `DROP TENANT` 语句进行。
+OceanBase 数据库支持通过 `DROP TENANT` 语句删除租户。
 
 删除租户后，租户下的数据库和表也同时被删除。但是租户使用的资源池不会被删除。资源池可以继续给其他租户使用。
 
-* 当系统租户开启回收站功能时，`DROP TENANT` 操作表示删除的租户会进入回收站。对于回收站中的租户，后续系统租户可以通过租户级回收站功能进一步删除或恢复该租户，租户级回收站相关操作请参见 [租户回收站](../../../7.reference/2.administrator-guide/5.backup-and-recovery/1.flashback/3.tenant-recycle.md)。
+* 当系统租户开启回收站功能时，`DROP TENANT` 操作表示删除的租户会进入回收站。对于回收站中的租户，后续系统租户可以通过租户级回收站功能进一步删除或恢复该租户，租户级回收站相关操作参见 [租户回收站](../../../7.reference/2.administrator-guide/5.backup-and-recovery/1.flashback/3.tenant-recycle.md)。
 
 * 当系统租户关闭回收站功能时，`DROP TENANT` 操作会直接删除租户，租户下的数据库和表也同时被删除。
 
 ## 操作步骤
 
-1. 使用 root 用户登录到数据库的 sys 租户。
+1. 使用 root 用户登录到集群的 sys 租户。
 
     ```sql
     $obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
@@ -38,7 +36,7 @@
     1 row in set
     ```
 
-    `DBA_OB_TENANTS` 视图的详细说明，请参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)
+    `DBA_OB_TENANTS` 视图的详细说明，参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)
 
 4. （可选）为防止恶意或误操作导致的数据不可恢复性丢失，OceanBase 数据库提供了租户级的回收站功能，从而支持租户级的数据的快速恢复功能。回收站默认开启，在系统租户下使用 `SHOW RECYCLEBIN` 语句，可以查看当前系统租户 RECYCLEBIN 中的回收站对象。示例如下：
 
@@ -69,7 +67,7 @@
     DROP TENANT mq_t1;
     ```
 
-    `DROP TENANT` 语句的详细说明，请参见 [DROP TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/11.drop-tenant.md)。
+    `DROP TENANT` 语句的详细说明，参见 [DROP TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/11.drop-tenant.md)。
 
 6. 查看 `DBA_OB_TENANTS` 视图，确认租户已经删除成功。
 
@@ -90,11 +88,11 @@
     1 row in set
     ```
 
-    回收站相关参数的详细说明，请参见 [recyclebin（MySQL 模式）](../../../7.reference/5.system-reference/2.system-variable-of-mysql-mode/113.recyclebin-of-mysql-mode.md)、[recyclebin（Oracle 模式）](../../../7.reference/5.system-reference/3.system-variable-of-oracle-mode/112.recyclebin-of-oracle-mode.md)。
+    回收站相关参数的详细说明，参见 [recyclebin（MySQL 模式）](../../../7.reference/5.system-reference/2.system-variable-of-mysql-mode/113.recyclebin-of-mysql-mode.md)、[recyclebin（Oracle 模式）](../../../7.reference/5.system-reference/3.system-variable-of-oracle-mode/112.recyclebin-of-oracle-mode.md)。
 
-## 更多信息
+## 相关文档
 
-删除后若需要恢复租户，相关的更多信息，请参见：
+删除后若需要恢复租户，相关信息参见：
 
 * [恢复租户](13.restore-tenant.md)
 
