--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/15.delete-resource-specification.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/15.delete-resource-specification.md
@@ -4,11 +4,11 @@
 
 ## 前提条件
 
-删除资源规格前必须确保当前资源规格未被使用。如果资源规格正在被使用，则需要先将资源规格从资源池中移出后再删除资源规格。详细操作，请参见 [修改资源池配置](9.modify-resource-pool-properties.md)。
+删除资源规格前必须确保当前资源规格未被使用。如果资源规格正在被使用，则需要先将资源规格从资源池中移出后再删除资源规格。详细操作，参见 [修改资源池配置](9.modify-resource-pool-properties.md)。
 
 ## 操作步骤
 
-1. 使用 root 用户登录到数据库的 sys 租户。
+1. 使用 root 用户登录到集群的 sys 租户。
 
     ```sql
     $obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
@@ -20,7 +20,9 @@
     obclient [(none)]> USE oceanbase;
     ```
 
-3. 通过 `DBA_OB_UNIT_CONFIGS` 和 `DBA_OB_RESOURCE_POOLS` 视图，确认资源规格的使用信息。如果查询结果的 NAME 列中无该资源规格名称，则表示该资源规格未被指定给资源池；如果查询结果的 NAME 列中有该资源规格名称，则表示资源规格已被指定给资源池。示例如下，确认资源规格 `S2_unit_config` 已经不在使用中。
+3. 通过 `DBA_OB_UNIT_CONFIGS` 和 `DBA_OB_RESOURCE_POOLS` 视图，确认资源规格的使用信息。如果查询结果的 `NAME` 列中无该资源规格名称，则表示该资源规格未被指定给资源池；如果查询结果的 `NAME` 列中有该资源规格名称，则表示资源规格已被指定给资源池。
+
+    示例如下，确认资源规格 `S2_unit_config` 已经不在使用中。
 
     ```sql
     obclient [oceanbase]> SELECT a.UNIT_CONFIG_ID, a.NAME AS UNIT_NAME, b.NAME AS POOL_NAME FROM oceanbase.DBA_OB_UNIT_CONFIGS a,oceanbase.DBA_OB_RESOURCE_POOLS b WHERE b.UNIT_CONFIG_ID=a.UNIT_CONFIG_ID;
@@ -39,9 +41,9 @@
     8 rows in set
     ```
 
-    `DBA_OB_UNIT_CONFIGS` 视图的详细说明，请参见 [oceanbase.DBA_OB_UNIT_CONFIGS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/60.oceanbase-dba_ob_unit_configs-of-mysql-mode.md)。
+    `DBA_OB_UNIT_CONFIGS` 视图的详细说明，参见 [oceanbase.DBA_OB_UNIT_CONFIGS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/60.oceanbase-dba_ob_unit_configs-of-mysql-mode.md)。
 
-    `DBA_OB_RESOURCE_POOLS` 视图的详细说明，请参见 [oceanbase.DBA_OB_RESOURCE_POOLS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
+    `DBA_OB_RESOURCE_POOLS` 视图的详细说明，参见 [oceanbase.DBA_OB_RESOURCE_POOLS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
 
 4. 通过 `DROP RESOURCE UNIT` 语句，删除资源规格。
 
@@ -52,7 +54,7 @@
     Query OK, 0 rows affected
     ```
 
-    `DROP RESOURCE UNIT` 语句的详细说明，请参见 [DROP RESOURCE UNIT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/10.drop-resource-unit.md)。
+    `DROP RESOURCE UNIT` 语句的详细说明，参见 [DROP RESOURCE UNIT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/10.drop-resource-unit.md)。
 
 5. 查看 `DBA_OB_UNIT_CONFIGS` 视图，确认资源规格删除成功。
 
