--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/2.create-resource-pool.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/2.create-resource-pool.md
@@ -9,13 +9,13 @@
 
 ## 操作步骤
 
-1. 使用 root 用户登录到数据库的 sys 租户。
+1. 使用 root 用户登录到集群的 sys 租户。
 
     ```sql
     $obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
     ```
 
-2. 进入 oceanbase 数据库。
+2. 进入 OceanBase 数据库。
 
     ```sql
     obclient [(none)]> USE oceanbase;
@@ -39,7 +39,7 @@
     7 rows in set
     ```
 
-   `DBA_OB_RESOURCE_POOLS` 视图的详细说明，请参见 [oceanbase.DBA_OB_RESOURCE_POOLS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
+   `DBA_OB_RESOURCE_POOLS` 视图的详细说明，参见 [oceanbase.DBA_OB_RESOURCE_POOLS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
 
 4. 通过 `CREATE RESOURCE POOL` 语句，创建资源池。
 
@@ -56,9 +56,9 @@
 
     * `UNIT`：该资源池的资源规格。
     * `UNIT_NUM`：该资源池在目标 Zone 的 Unit 个数，它的值要小于目标 Zone 的节点个数，且每个节点上最多只能分布同一个租户的一个 Unit。
-    * `ZONE_LIST`：资源池的 Zone 分布。OceanBase 数据库会在 `ZONE_LIST` 描述的每个 Zone 里面创建 `UNIT_NUM` 个 Unit，每个 Unit 的资源规格为 UNIT 参数设置的值。
+    * `ZONE_LIST`：资源池的 Zone 分布。OceanBase 数据库会在 `ZONE_LIST` 描述的每个 Zone 里面创建 `UNIT_NUM` 个 Unit，每个 Unit 的资源规格为 `UNIT` 参数设置的值。
 
-    `CREATE RESOURCE POOL` 语句的详细说明，请参见 [CREATE RESOURCE POOL](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/6.create-resource-pool.md)。
+    `CREATE RESOURCE POOL` 语句的详细说明，参见 [CREATE RESOURCE POOL](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/6.create-resource-pool.md)。
 
     示例：
 
@@ -83,9 +83,9 @@
     1 row in set
     ```
 
-## 更多信息
+## 相关文档
 
-资源池创建后，您可以根据业务需要，将资源池分配给租户，也可以修改资源池属性。详细操作，请参见：
+资源池创建后，您可以根据业务需要，将资源池分配给租户，也可以修改资源池属性。详细操作参见：
 
 * [创建租户](3.create-tenant.md)
 
