--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/4.view-tenant-information.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/4.view-tenant-information.md
@@ -32,7 +32,7 @@ obclient [oceanbase]> SELECT * FROM DBA_OB_UNIT_CONFIGS;
 7 rows in set
 ```
 
-`DBA_OB_UNIT_CONFIGS` 视图参数详细说明，请参见 [DBA_OB_UNIT_CONFIGS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/60.oceanbase-dba_ob_unit_configs-of-mysql-mode.md)。
+`DBA_OB_UNIT_CONFIGS` 视图参数详细说明，参见 [DBA_OB_UNIT_CONFIGS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/60.oceanbase-dba_ob_unit_configs-of-mysql-mode.md)。
 
 ## 查看所有的资源池信息
 
@@ -56,7 +56,7 @@ obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS;
 7 rows in set
 ```
 
-`DBA_OB_RESOURCE_POOLS` 视图参数详细说明，请参见 [DBA_OB_RESOURCE_POOLS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
+`DBA_OB_RESOURCE_POOLS` 视图参数详细说明，参见 [DBA_OB_RESOURCE_POOLS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
 
 ## 查看所有租户信息
 
@@ -78,7 +78,7 @@ obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS;
 5 rows in set
 ```
 
-`DBA_OB_TENANTS` 视图参数详细说明，请参见 [DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
+`DBA_OB_TENANTS` 视图参数详细说明，参见 [DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
 
 ## 查看租户资源配置
 
@@ -166,7 +166,7 @@ obclient [oceanbase]> SELECT * FROM GV$OB_UNITS;
 15 rows in set
 ```
 
-`GV$OB_UNITS` 视图参数详细说明，请参见 [GV$OB_UNITS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/13.gv-ob_units-of-mysql-mode.md)。
+`GV$OB_UNITS` 视图参数详细说明，参见 [GV$OB_UNITS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/13.gv-ob_units-of-mysql-mode.md)。
 
 ## 查看节点的资源分配信息
 
@@ -186,4 +186,4 @@ obclient [oceanbase]> SELECT * FROM GV$OB_SERVERS;
 3 rows in set
 ```
 
-`GV$OB_SERVERS` 视图参数详细说明，请参见 [GV$OB_SERVERS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/9.gv-ob_servers-of-mysql-mode.md)。
+`GV$OB_SERVERS` 视图参数详细说明，参见 [GV$OB_SERVERS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/9.gv-ob_servers-of-mysql-mode.md)。
