--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/5.view-and-set-whitelist.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/5.view-and-set-whitelist.md
@@ -4,15 +4,15 @@
 
 ## 背景信息
 
-租户白名单指的是该租户允许登录的客户端列表，通过租户系统变量 ob_tcp_invited_nodes 的值来确定。您可以根据业务需要自定义租户的白名单，系统支持以下多种租户白名单格式：
+租户白名单指的是该租户允许登录的客户端列表，通过租户系统变量 `ob_tcp_invited_nodes` 的值来确定。您可以根据业务需要自定义租户的白名单，系统支持以下多种租户白名单格式：
 
-IP 地址的形式：`10.10.10.10,10.10.10.11`
+* IP 地址的形式：`10.10.10.10,10.10.10.11`
 
-子网/掩码的形式：`10.10.10.0/24`
+* 子网/掩码的形式：`10.10.10.0/24`
 
-模糊匹配的形式：`10.10.10.%` 或者 `10.10.10._`
+* 模糊匹配的形式：`10.10.10.%` 或者 `10.10.10._`
 
-多种格式混合的形式：`10.10.10.10,10.10.10.11,10.10.10.%,10.10.10._,10.10.10.0/24`
+* 多种格式混合的形式：`10.10.10.10,10.10.10.11,10.10.10.%,10.10.10._,10.10.10.0/24`
 
 ## 查看租户白名单
 
@@ -39,7 +39,7 @@ IP 地址的形式：`10.10.10.10,10.10.10.11`
 
 ### sys 租户管理员修改租户白名单
 
-1. 使用 root 用户登录到数据库的 sys 租户。
+1. 使用 root 用户登录到集群的 sys 租户。
 
     ```sql
     $obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
