--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/6.view-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/6.view-system-variables-of-tenant.md
@@ -1,10 +1,10 @@
 # 查看租户系统变量
 
-本文介绍如何查看租户系统变量。
+通过系统变量的设置可以使 OceanBase 数据库的行为符合业务的要求。本文介绍如何查看租户系统变量。
 
 ## 通过 SHOW 语句查看租户系统变量
 
-1. 使用 root 用户登录到数据库的用户租户。
+1. 使用 root 用户登录到集群的用户租户。
 
    以 `mq_t1`  租户为例：
 
@@ -22,7 +22,7 @@
 
    参数说明：
 
-   * `SESSION | GLOBAL`：SESSION 表示会话变量，GLOBAL 表示全局变量。不填写默认修改 Session 变量。
+   * `SESSION | GLOBAL`：SESSION 表示会话变量，GLOBAL 表示全局变量。不填写默认查看 Session 变量。
    * `pattern`：表示变量关键字。
 
    示例：
@@ -65,13 +65,13 @@
 
 * MySQL 模式
 
-  1. 使用 root 用户登录到数据库的 mysql001 租户。
+  1. 使用 root 用户登录到集群的 mysql001 租户。
 
       ```sql
       $obclient -P2881 -h172.30.xx.xx -uroot@mysql001#cluster -p**** -A -Doceanbase
       ```
 
-  2. 进入 oceanbase 数据库。
+  2. 进入 OceanBase 数据库。
 
       ```sql
       obclient [(none)]> USE oceanbase;
@@ -79,7 +79,7 @@
 
   3. 通过视图查询变量值。
 
-     * 通过 `INFORMATION_SCHEMA.SESSION_VARIABLES` 视图查询 'ob_query_timeout' 的 Session 级别变量值。
+     * 通过 `INFORMATION_SCHEMA.SESSION_VARIABLES` 视图查询 `ob_query_timeout` 的 Session 级别变量值。
 
         ```sql
         obclient [oceanbase]> SELECT * FROM INFORMATION_SCHEMA.SESSION_VARIABLES WHERE VARIABLE_NAME = 'ob_query_timeout';
@@ -105,7 +105,7 @@
 
 * Oracle 模式
 
-  1. 使用 sys 用户登录到数据库的 oracle001 租户。
+  1. 使用 sys 用户登录到集群的 oracle001 租户。
 
       ```sql
       $obclient -h172.30.xx.xx -P2883 -usys@oracle001#cluster -p**** -A
@@ -125,7 +125,7 @@
         1 row in set
         ```
 
-     * 通过 `SYS.TENANT_VIRTUAL_GLOBAL_VARIABLE` 视图查询 'ob_query_timeout' 的 Global 级别的变量值。
+     * 通过 `SYS.TENANT_VIRTUAL_GLOBAL_VARIABLE` 视图查询 `ob_query_timeout` 的 Global 级别的变量值。
 
         ```sql
         obclient [SYS]> SELECT * FROM SYS.TENANT_VIRTUAL_GLOBAL_VARIABLE WHERE VARIABLE_NAME = 'ob_query_timeout';
@@ -137,10 +137,9 @@
         1 row in set
         ```
 
-## 更多信息
+## 相关文档
 
-变量详细的了解和使用，请参见：
+关于系统变量的更多信息，参见：
 
 * [系统变量概述](../../../7.reference/5.system-reference/2.system-variable-of-mysql-mode/1.overview-of-system-variables-of-mysql-mode.md)
-* [ob_query_timeout（MySQL 模式）](../../../7.reference/5.system-reference/2.system-variable-of-mysql-mode/90.ob_query_timeout-of-mysql-mode.md)
-* [ob_query_timeout（Oracle 模式）](../../../7.reference/5.system-reference/3.system-variable-of-oracle-mode/89.ob_query_timeout-of-oracle-mode.md)
+* [修改系统变量](7.modify-system-variables-of-tenant.md)
