--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
@@ -1,6 +1,6 @@
 # 修改租户系统变量
 
-本文介绍如何修改租户系统变量。
+通过系统变量的设置可以使 OceanBase 数据库的行为符合业务的要求。本文介绍如何修改租户系统变量。
 
 租户的系统变量可以通过 `SET` 语句修改。
 
@@ -16,7 +16,7 @@
 
 ## 修改 Session 级别的系统变量
 
-1. 使用 root 用户登录到数据库的用户租户。
+1. 使用 root 用户登录到集群的用户租户。
 
    以登录 `mq_t1` 租户为例：
 
@@ -57,7 +57,7 @@
 
 ## 修改 Global 级别的系统变量
 
-1. 使用 root 用户登录到数据库的用户租户。
+1. 使用 root 用户登录到集群的用户租户。
 
    以登录 `mq_t1` 租户为例：
 
@@ -114,3 +114,10 @@ SET GLOBAL foreign_key_checks = 0;
  <h4>说明</h4>
  <p>通过 ON/OFF、TRUE/FALSE 或 1/0 三种方式进行布尔类型变量的设置是等效的。</p>
 </main>
+
+## 相关文档
+
+关于系统变量的更多信息，参见：
+
+* [系统变量概述](../../../7.reference/5.system-reference/2.system-variable-of-mysql-mode/1.overview-of-system-variables-of-mysql-mode.md)
+* [查看系统变量](6.view-system-variables-of-tenant.md)
