--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.modify-resource-specifications.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.modify-resource-specifications.md
@@ -4,11 +4,11 @@
 
 ## 前提条件
 
-在修改资源规格前，如果该资源规格正在被租户使用并且确认需要增加资源，则在增加资源的过程中必须保证 OBServer 有足够的剩余资源可用于分配。您可以通过 `GV$OB_SERVERS` 视图来查询节点总资源和已经分配的资源，然后通过计算来确定是否可以修改资源规格。`GV$OB_SERVERS` 视图详细介绍，请参见 [oceanbase.GV$OB_SERVERS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/13.gv-ob_units-of-mysql-mode.md)。
+在修改资源规格前，如果该资源规格正在被租户使用并且确认需要增加资源，则在增加资源的过程中必须保证 OBServer 有足够的剩余资源可用于分配。您可以通过 `GV$OB_SERVERS` 视图来查询节点总资源和已经分配的资源，然后通过计算来确定是否可以修改资源规格。`GV$OB_SERVERS` 视图详细介绍，参见 [oceanbase.GV$OB_SERVERS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/13.gv-ob_units-of-mysql-mode.md)。
 
 ## 操作步骤
 
-1. 使用 root 用户登录到数据库的 sys 租户。
+1. 使用 root 用户登录到集群的 sys 租户。
 
     ```sql
     $obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
@@ -34,9 +34,9 @@
     1 row in set
     ```
   
-    该视图的详细说明，请参见 [oceanbase.DBA_OB_UNIT_CONFIGS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/60.oceanbase-dba_ob_unit_configs-of-mysql-mode.md)。
+    该视图的详细说明，参见 [oceanbase.DBA_OB_UNIT_CONFIGS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/60.oceanbase-dba_ob_unit_configs-of-mysql-mode.md)。
 
-4. 通过 ALTER RESOURCE UNIT 语句，修改资源规格。
+4. 通过 `ALTER RESOURCE UNIT` 语句，修改资源规格。
 
     语法如下：
 
@@ -52,7 +52,7 @@
     * `MEMORY_SIZE`：内存规格。
     * `MAX_CPU`：CPU 规格上限。
 
-    `ALTER RESOURCE UNIT` 语句的详细说明，请参见 [ALTER RESOURCE UNIT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/4.alter-resource-unit.md)。
+    `ALTER RESOURCE UNIT` 语句的详细说明，参见 [ALTER RESOURCE UNIT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/4.alter-resource-unit.md)。
 
     示例：
 
@@ -77,5 +77,5 @@
 
     <main id="notice" type='notice'>
         <h4>注意</h4>
-        <p>如果是租户已经在使用的资源规格，实际修改生效的情况需要通过视图 GV$OB_UNITS 查看对应租户的 Unit 是否完成规格修改。因为修改规格是异步的过程，真正生效需要由各个 Server 决定。</p>
+        <p>如果是租户已经在使用的资源规格，实际修改生效的情况需要通过视图 <code>GV$OB_UNITS</code> 查看对应租户的 Unit 是否完成规格修改。因为修改规格是异步的过程，真正生效需要由各个 Server 决定。</p>
     </main>
