--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/9.modify-resource-pool-properties.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/9.modify-resource-pool-properties.md
@@ -13,7 +13,7 @@
 
 ## 操作步骤
 
-1. 使用 root 用户登录到数据库的 sys 租户。
+1. 使用 root 用户登录到集群的 sys 租户。
 
     ```sql
     $obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
@@ -39,13 +39,13 @@
     1 row in set
     ```
 
-    `DBA_OB_RESOURCE_POOLS` 视图的详细说明，请参见 [oceanbase.DBA_OB_RESOURCE_POOLS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
+    `DBA_OB_RESOURCE_POOLS` 视图的详细说明，参见 [oceanbase.DBA_OB_RESOURCE_POOLS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
 
 4. 通过 `ALTER RESOURCE POOL` 语句，修改资源池配置。
 
     <main id="notice" type='notice'>
      <h4>注意</h4>
-     <p><ul><li>单条语句只能修改一个属性，如果需要同时修改 `UNIT`，`UNIT_NUM`，`ZONE_LIST` 中两条及以上的属性，需要分多条语句执行。</li><li> 修改 `ZONE_LIST` 时，每次仅支持添加或删除一个 Zone。</li></ul></p>
+     <p><ul><li>单条语句只能修改一个属性，如果需要同时修改 <code>UNIT</code>、<code>UNIT_NUM</code>、<code>ZONE_LIST</code> 中两条及以上的属性，需要分多条语句执行。</li><li> 修改 <code>ZONE_LIST</code> 时，每次仅支持添加或删除一个 Zone。</li></ul></p>
     </main>
 
     语法如下：
@@ -65,14 +65,14 @@
 
       <main id="notice" type='notice'>
       <h4>注意</h4>
-      <p>如果该资源池已经被租户使用，无法通过修改资源池属性的方式修改，需要通过 `ALTER RESOURCE TENANT` 语句进行修改。</p>
+      <p>如果该资源池已经被租户使用，无法通过修改资源池属性的方式修改，需要通过 <code>ALTER RESOURCE TENANT</code> 语句进行修改。</p>
       </main>
 
     * `ZONE_LIST`：资源池的 Zone 分布。
 
-    `ALTER RESOURCE POOL` 语句的详细说明，请参见 [ALTER RESOURCE POOL](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/3.alter-resource-pool.md)。
+    `ALTER RESOURCE POOL` 语句的详细说明，参见 [ALTER RESOURCE POOL](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/3.alter-resource-pool.md)。
 
-    `ALTER RESOURCE TENANT` 语句的详细说明，请参见 [ALTER RESOURCE TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/2.alter-resource-tenant.md)。
+    `ALTER RESOURCE TENANT` 语句的详细说明，参见 [ALTER RESOURCE TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/2.alter-resource-tenant.md)。
 
     示例：
 
