--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/14.delete-resource-pool.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/14.delete-resource-pool.md
@@ -6,16 +6,16 @@
 
 删除资源池前，请确认该资源池当前未被任何租户使用。如果资源池正在被租户使用，则需要将资源池释放后再删除资源池。
 
-* 当租户有多个资源池，可以通过修改资源池配置，从租户中移除资源池。相关操作请参见 [修改资源池配置](9.modify-resource-pool-properties.md)。
+* 当租户有多个资源池，可以通过修改资源池配置，从租户中移除资源池。相关操作参见 [修改资源池配置](9.modify-resource-pool-properties.md)。
 
 * 当租户只有一个资源池时，不支持直接移除。
 
-  * 先新建资源池，分配给该租户，再通过修改资源池配置释放需要删除的资源池。新建资源池操作，请参见 [新建资源池](2.create-resource-pool.md)。
-  * 如果租户已不再使用，也可以先删除租户后，再删除资源池。详细操作，请参见 [删除租户](12.delete-tenant.md)。
+  * 先新建资源池，分配给该租户，再通过修改资源池配置释放需要删除的资源池。新建资源池操作，参见 [新建资源池](2.create-resource-pool.md)。
+  * 如果租户已不再使用，也可以先删除租户后，再删除资源池。详细操作，参见 [删除租户](12.delete-tenant.md)。
 
 ## 操作步骤
 
-1. 使用 root 用户登录到数据库的 sys 租户。
+1. 使用 root 用户登录到集群的 sys 租户。
 
     ```sql
     $obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
@@ -41,7 +41,7 @@
     1 row in set
     ```
 
-    `DBA_OB_RESOURCE_POOLS` 视图的详细说明，请参见 [oceanbase.DBA_OB_RESOURCE_POOLS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
+    `DBA_OB_RESOURCE_POOLS` 视图的详细说明，参见 [oceanbase.DBA_OB_RESOURCE_POOLS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
 
 4. 通过 `DROP RESOURCE POOL` 语句，删除资源池。
 
@@ -52,7 +52,7 @@
     Query OK, 0 rows affected 
     ```
 
-    `DROP RESOURCE POOL` 语句的详细说明，请参见 [DROP RESOURCE POOL](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/9.drop-resource-pool.md)。
+    `DROP RESOURCE POOL` 语句的详细说明，参见 [DROP RESOURCE POOL](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/9.drop-resource-pool.md)。
 
 5. 查看 `DBA_OB_RESOURCE_POOLS` 视图，确认资源池删除成功。
 
